# nirvana

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
api/executor/llm/: index.html
api/executor/tools/: index.html
api/frame/dataframe/: index.html
api/ops/filter/: index.html
api/ops/join/: index.html
api/ops/map/: index.html
api/ops/rank/: index.html
api/ops/reduce/: index.html
api/optimizer/optimizer/: index.html
api_reference/: index.html
concepts/data_lineage/: index.html
concepts/operators/: index.html
concepts/optimizers/logical_optimizer/: index.html
datarails/: Cargo.toml
datarails/src/: lib.rs
development/: index.html
docs/: README.md  mkdocs.yml  requirements.txt
docs/docs/: api_reference.md  development.md  get_started.md  index.md  tutorial.md
docs/scripts/: build_docs.sh
get_started/: index.html
mahjong/: __init__.py  dataframe.py  llm_setting.py  utils.py
mahjong/dataframe/: frame.py
mahjong/lineage/: abstractions.py  lineage.py  mixin.py  plan_rewrite.py  utils.py
mahjong/models/: __init__.py  llm_backbone.py
mahjong/ops/: __init__.py  base.py  discover.py  filter.py  join.py  map.py  rank.py  reduce.py  select.py
mahjong/optim/: __init__.py  logical.py  optimize_prompt.py  optimizer.py  physical.py
mahjong/optimization/: evaluator.py  optimize_prompt.py  optimizer.py  plan_rewrite.py
mahjong/optimizers/: evaluation.py  optimize_prompt.py  optimizer.py
mahjong/prompt_templates/: __init__.py  filter_prompter.py  join_prompter.py  map_prompter.py  reduce_prompter.py
nirvana/: __init__.py  utils.py
nirvana/dataframe/: frame.py
nirvana/datalake/: datalake.py  lake_manager.py
nirvana/executors/: __init__.py  constants.py  llm_backbone.py  slm_backbone.py  tools.py
nirvana/lineage/: abstractions.py  mixin.py  utils.py
nirvana/models/: __init__.py  llm_backbone.py
nirvana/ops/: __init__.py  base.py  discover.py  filter.py  join.py  map.py  rank.py  reduce.py  scan.py
nirvana/optim/: __init__.py  evaluator.py  logical.py  optimize_prompt.py  optimizer.py  physical.py  plan_rewrite.py  static_rules.py
search/: search_index.json
testdata/: movie_data.csv
tests/: test_filter.py  test_image_dtype.py  test_join.py  test_map.py  test_rank.py
tutorial/: index.html
(+150 files in other folders)
